# ustb-wifi-tools

./: .gitignore  CHANGELOG.md  LICENSE  README.md  auto-imports.d.ts  change_version.py  components.d.ts  deno.json  dprint.json  index.html  justfile  package.json  pnpm-lock.yaml  rsbuild.config.ts  user-dashboard.json  vite.config.ts
.github/workflows/: release.yml
public/: macarons.json
src/: App.vue  helper.ts  main.ts  store.ts  styles.css  update.ts
src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  electric_bill.rs  entities.rs  lib.rs  localuser.rs  main.rs  onedrive.rs  requests.rs  setting.rs  utils.rs
src-tauri/src/utils/: webvpn.rs
src/components/: ElectricChart.vue  Greet.vue  Menu.vue  MonthlyChart.vue  SummaryTable.vue  YearlyChart.vue  chart.vue
src/pages/: About.vue  ElectricBill.vue  Login.vue  MonthPay.vue  MonthlyUserLog.vue  NotFound.vue  OtherTools.vue  SpeedTest.vue  UnbindMacs.vue  UserInfo.vue  UserLoginLog.vue  UserOnlineLog.vue
