[package]
name = "ustb-wifi-tools"
version = "1.1.3"
description = "A Tauri App that can be used to get information of the USTB Wifi"
authors = ["CakeAL"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "protocol-asset", "macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
# functions
scraper = "0.20.0"
rustls = { version = "0.23", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
chrono = "0.4.38"
mac_address = "1.1.7"
if-addrs = "0.13.3"
# tauri plugin
window-vibrancy = "0.5.2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
# others
anyhow = "1"
rand = "0.8.5"
md5 = "0.7.0"
regex = "1.10.4"
windows-version = "0.1"
sha2 = "0.10.8"
base64 = "0.22.1"
zip = "2.2.1"
tauri-plugin-clipboard-manager = "2.2.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

# [target.x86_64-pc-windows-gnu]
# linker = "x86_64-w64-mingw32-gcc"
