[package]
name = "ustb-wifi-tools"
version = "1.2.1"
authors = ["CakeAL"]
edition = "2021"
description = "A Tauri App that can be used to get information of the USTB Wifi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
base64 = "0.22.1"
chrono = "0.4"
if-addrs = "0.15"
mac_address = "1.1.7"
md5 = "0.8"
rand = "0.10"
regex = "1.12"
reqwest = { version = "0.13", features = ["form", "query"] }
rustls = { version = "0.23", default-features = false }
scraper = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.9"
tauri = { version = "2.10", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-clipboard-manager = "2.3"
tauri-plugin-dialog = "2.6"
tauri-plugin-opener = "2.5"
tauri-plugin-os = "2.3"
tauri-plugin-shell = "2.3"
tokio = { version = "1", features = ["full"] }
window-vibrancy = "0.7"
zip = "8.2.0"
aes = "0.8"
cfb-mode = "0.8"
hex = "0.4"
url = "2"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"

[target."cfg(target_os = \"windows\")".dependencies]
windows-version = "0.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

# [target.x86_64-pc-windows-gnu]
# linker = "x86_64-w64-mingw32-gcc"
